--- a/src/app/build-pc/build-pc.component.css
+++ b/src/app/build-pc/build-pc.component.css
@@ -7,6 +7,7 @@
     transition: var(--transition);
     background: #f3f1f1;
 }
+
 .single-categories:before {
     top: 0;
     right: 0;
@@ -17,44 +18,58 @@
     position: absolute;
     background-color: #a71aa9;
     transition: var(--transition);
-    clip-path: polygon(100% -200%,18% 100%,100% 100%);
+    clip-path: polygon(100% -200%, 18% 100%, 100% 100%);
 }
+
 .color0 {
     color: #a71aa9;
 }
+
 .single-categories.bg1:before {
-    background-color: #d45429;;
+    background-color: #d45429;
+    ;
 }
+
 .color1 {
     color: #d45429;
 }
+
 .single-categories.bg2:before {
     background-color: #d8c285;
 }
+
 .color2 {
     color: #d8c285;
 }
+
 .single-categories.bg3:before {
     background-color: #a93939;
 }
+
 .color3 {
     color: #a93939;
 }
+
 .single-categories.bg4:before {
     background-color: #434c1e;
 }
+
 .color4 {
     color: #434c1e;
 }
+
 .single-categories.bg5:before {
     background-color: #5567cc;
 }
+
 .color5 {
     color: #5567cc;
 }
+
 .single-categories.bg6:before {
     background-color: #17cdbe;
 }
+
 .color6 {
     color: #17cdbe;
 }
@@ -62,24 +77,31 @@
 .single-categories.bg7:before {
     background-color: #2f42ad;
 }
+
 .color7 {
     color: #2f42ad;
 }
+
 .single-categories.bg8:before {
     background-color: #17cdbe;
 }
+
 .color8 {
     color: #17cdbe;
 }
+
 .single-categories.bg9:before {
     background-color: #43e864;
 }
+
 .color9 {
     color: #43e864;
 }
+
 .single-categories.bg10:before {
     background-color: #942c2c;
 }
+
 .color10 {
     color: #942c2c;
 }
@@ -91,16 +113,20 @@
     max-width: 145px;
     position: absolute;
 }
- h3 {
+
+h3 {
     font-weight: 700;
-    -webkit-text-stroke: 2px black; /* width and color */  
-    text-transform: uppercase; 
- }
- span {
+    -webkit-text-stroke: 2px black;
+    /* width and color */
+    text-transform: uppercase;
+}
+
+span {
     text-shadow: 2px 0 #fff, -2px 0 #fff, 0 2px #fff, 0 -2px #fff,
-                 1px 1px #fff, -1px -1px #fff, 1px -1px #fff, -1px 1px #fff;
-  }
-.read-more{
+        1px 1px #fff, -1px -1px #fff, 1px -1px #fff, -1px 1px #fff;
+}
+
+.read-more {
     margin-top: 3px;
     border: 1px solid;
     text-transform: uppercase;
@@ -108,8 +134,9 @@
     font-weight: 900;
     padding: 5px 5px 5px 11px;
 
-    transform: skew(10deg); /* Equal to skewX(10deg) */
-  }
+    transform: skew(10deg);
+    /* Equal to skewX(10deg) */
+}
 
 @media screen and (max-width: 1024px) {
     .single-categories img {
@@ -118,25 +145,28 @@
         max-width: 125px;
         position: absolute;
     }
-     h3 {
-        font-weight: 700;
-        -webkit-text-stroke: 1px black; /* width and color */  
-        text-transform: uppercase; 
-        font-size: 20px;
-     }
 
-     .read-more{
+    h3 {
+        font-weight: 700;
+        -webkit-text-stroke: 1px black;
+        /* width and color */
+        text-transform: uppercase;
+        font-size: 20px;
+    }
+
+    .read-more {
         margin-top: 3px;
         border: 1px solid;
         text-transform: uppercase;
         font-size: 16px;
         font-weight: 900;
         padding: 5px 5px 5px 11px;
-    
-        transform: skew(10deg); /* Equal to skewX(10deg) */
-      }
-    
-      .single-categories {
+
+        transform: skew(10deg);
+        /* Equal to skewX(10deg) */
+    }
+
+    .single-categories {
         z-index: 1;
         position: relative;
         margin-bottom: 10px;
@@ -145,13 +175,14 @@
         transition: var(--transition);
         background: #f3f1f1;
     }
+
     .single-categories img {
         top: 5px;
         right: 25px;
         max-width: 125px;
         position: absolute;
     }
-  }
+}
 
 @media screen and (max-width: 768px) {
     .single-categories img {
@@ -160,26 +191,29 @@
         max-width: 115px;
         position: absolute;
     }
-     h3 {
+
+    h3 {
         font-weight: 700;
-        -webkit-text-stroke: 1px black; /* width and color */  
-        text-transform: uppercase; 
+        -webkit-text-stroke: 1px black;
+        /* width and color */
+        text-transform: uppercase;
 
         font-size: 16px;
-     }
+    }
 
-     .read-more{
+    .read-more {
         margin-top: 3px;
         border: 1px solid;
         text-transform: uppercase;
         font-size: 14px;
         font-weight: 900;
         padding: 5px 5px 5px 11px;
-    
-        transform: skew(10deg); /* Equal to skewX(10deg) */
-      }
-    
-      .single-categories {
+
+        transform: skew(10deg);
+        /* Equal to skewX(10deg) */
+    }
+
+    .single-categories {
         z-index: 1;
         position: relative;
         margin-bottom: 10px;
@@ -188,26 +222,26 @@
         transition: var(--transition);
         background: #f3f1f1;
     }
+
     .single-categories img {
         top: 5px;
         right: 15px;
         max-width: 105px;
         position: absolute;
     }
+
     h5 {
         margin: 0 0 0px;
         line-height: 1.25;
         color: #000;
-        font-size: 12px;    margin-bottom: 10px;
+        font-size: 12px;
+        margin-bottom: 10px;
     }
-  }
+}
 
+/*************/
 
-
-
-  /*************/
-
-  .table tr td.att-name {
+.table tr td.att-name {
     width: 255px;
     height: 46px;
     background: #f0f3fc;
@@ -220,7 +254,7 @@
 }
 
 .add-cart-buttons {
-    flex-direction: column-reverse
+    flex-direction: column-reverse;
 }
 
 
@@ -237,24 +271,24 @@
     /* text-transform: uppercase */
 }
 
- .add-cart-buttons .btn-add-cart.disable {
-    background-color: #ccc!important
+.add-cart-buttons .btn-add-cart.disable {
+    background-color: #ccc !important
 }
 
 .add-cart-buttons .btn-add-cart.preorder {
-    background: #f9495f!important
+    background: #f9495f !important
 }
 
 .add-cart-buttons .btn-add-cart-2 {
-    background: #fff!important;
-    border: 1px solid #197bb7!important;
-    color: #197bb7!important
+    background: #fff !important;
+    border: 1px solid #197bb7 !important;
+    color: #197bb7 !important
 }
 
 .add-cart-buttons .btn-add-cart-2:hover {
-    color: #2872c7!important;
-    background-color: #fff!important;
-    border: 1px solid #fa9f2c!important
+    color: #2872c7 !important;
+    background-color: #fff !important;
+    border: 1px solid #fa9f2c !important
 }
 
 .add-cart-buttons .btn-add-cart-2:hover svg path {
@@ -262,18 +296,17 @@
 }
 
 
-.refresh-build{
-    width: 20%;
+.refresh-build {
+    width: auto;
     height: 32px;
     background: #197bb7;
     border: none;
     font-weight: 700;
     font-size: 16px;
     color: #fff;
-    margin-left: 10px;
     text-align: left;
-    margin-bottom: 15px;
-    /* text-transform: uppercase */
+    margin-bottom: 15px; 
+       padding-right: 15px;
 }
 
 .product-shop .product-name a {
@@ -283,13 +316,14 @@
     margin-top: 10px;
     letter-spacing: 1px;
     font-weight: 500;
-    /* border-bottom: 1px solid #e5e5e5; */
     display: flex;
     color: #005ec4;
     line-height: 20px;
     font-family: Arial, sans-serif;
+    cursor: pointer;
 }
-.product-code{
+
+.product-code {
     font-size: 14px;
     font-family: Arial, sans-serif;
 }
@@ -349,4 +383,261 @@
     color: #197bb7;
     font-weight: 700;
     font-size: 10px;
+}
+
+.small-image {
+    cursor: pointer;
+}
+
+.add-to-card> a{
+    background: #197bb7;
+    color: #fff;
+    border-color: #197bb7;
+
+}
+
+.add-to-card {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-decoration: none;
+    font-weight: 700;
+    font-size: 16px;
+    color: #197bb7;
+    margin-bottom: 16px;
+    background: #197bb7;
+    border: 1px solid#197bb7;
+    height: 44px;
+    cursor: pointer;
+    text-transform: uppercase;
+}
+
+.add-to-card-lienhe {
+    background: rgb(237, 27, 36);
+    border-color: rgb(237, 27, 36);
+    color: rgb(255, 255, 255);
+
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-decoration: none;
+    font-weight: 700;
+    font-size: 16px;
+    margin-bottom: 16px;
+    border: 1px solid#197bb7;
+    height: 44px;
+    cursor: pointer;
+    text-transform: uppercase;
+}
+
+.add-to-card-lienhe > a{
+    color: #fff;
+}
+
+.btn-remove__build {
+    color: #d21212;
+    font-size: 20px;
+    cursor: pointer;
+}
+.bottom-page__build .btn-build__pc {
+    height: 50px;
+    font-size: 18px;
+    margin: 1.5em 5px 0;
+}
+
+.qty-select input {
+    margin: 0 4px;
+    border: 1px solid #000;
+    border-radius: 25px;
+    height: 25px;
+    text-align: center;
+    padding: 0 5px;
+    width: 100px;
+}
+
+
+/*build pc mobile*/
+@media screen and (max-width: 768px) {
+    .table tr td.att-name {
+        width: 140px;
+        height: 40px;
+        background: #f0f3fc;
+        text-indent: 5px;
+        line-height: 1.1;
+    }
+
+    .table tr td.att-name>strong {
+        font-size: 12px;
+    }
+
+    .product-shop .product-name a {
+        font-size: 14px;
+        text-align: left;
+        line-height: normal;
+        margin-top: 5px;
+        letter-spacing: 1px;
+        font-weight: 500;
+        display: flex;
+        color: #005ec4;
+        line-height: 20px;
+        font-family: Arial, sans-serif;
+        cursor: pointer;
+    }
+
+    .add-cart-buttons .btn-add-cart {
+        width: 60%;
+        height: 26px;
+        background: #197bb7;
+        border: none;
+        font-weight: 500;
+        font-size: 14px;
+        color: #fff;
+        margin-left: 10px;
+        text-align: left;
+        /* text-transform: uppercase */
+    }
+
+    .qty-select input {
+        margin: 0 4px;
+        border: 1px solid #000;
+        border-radius: 25px;
+        height: 20px;
+        text-align: center;
+        padding: 0 5px;
+        width: 55px;
+        font-size: 14px;
+    }
+    .qty-select{
+        font-size: 14px;
+    }
+
+    .add-to-card {
+        font-weight: 600;
+        font-size: 14px;
+        color: #197bb7;
+        margin-bottom: 14px;
+        background: #197bb7;
+        border: 1px solid#197bb7;
+        height: 40px;
+        cursor: pointer;
+        text-align: center;
+        text-transform: uppercase;
+    }
+    
+    .add-to-card-lienhe {
+        background: rgb(237, 27, 36);
+        border-color: rgb(237, 27, 36);
+        color: rgb(255, 255, 255);
+        font-weight: 600;
+        font-size: 14px;
+        margin-bottom: 14px;
+        border: 1px solid#197bb7;
+        height: 40px;
+        cursor: pointer;
+        text-transform: uppercase;
+        text-align: center;
+    }
+}
+
+@media screen and (max-width: 480px) {
+    .table tr td.att-name {
+        display: none;
+        visibility: hidden;
+    }
+    .table tr td.att-value {
+      height: 40px;
+    }
+
+    .table tr td.att-name>strong {
+        font-size: 12px;
+    }
+
+    .product-shop .product-name a {
+        font-size: 12px;
+        text-align: left;
+        line-height: normal;
+        margin-top: 5px;
+        letter-spacing: 1px;
+        font-weight: 400;
+        display: flex;
+        color: #005ec4;
+        line-height: 20px;
+        font-family: Arial, sans-serif;
+        cursor: pointer;
+    }
+
+    .add-cart-buttons .btn-add-cart {
+        width: calc( 100% - 54px);
+        height: 26px;
+        background: #197bb7;
+        border: none;
+        font-weight: 500;
+        font-size: 12px;
+        color: #fff;
+        margin-left: 10px;
+        text-align: left;
+        /* text-transform: uppercase */
+    }
+    .product-code{
+        font-size: 12px;
+        font-family: Arial, sans-serif;
+    }
+
+    .cart-p-remove {
+        cursor: pointer;
+        width: 55px;
+        height: 30px;
+        background: #fff;
+        border: 1px solid #005ec4;
+        box-sizing: border-box;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        color: #197bb7;
+        font-weight: 600;
+        font-size: 10px;
+    }
+
+    .refresh-build {
+        width: auto;
+        height: 32px;
+        background: #197bb7;
+        border: none;
+        font-weight: 600;
+        font-size: 12px;
+        color: #fff;
+        margin-left: 0px;
+        text-align: left;
+        margin-bottom: 15px;
+    }
+
+    .add-to-card {
+        font-weight: 500;
+        font-size: 12px;
+        color: #197bb7;
+        margin-bottom: 12px;
+        background: #197bb7;
+        border: 1px solid#197bb7;
+        height: 38px;
+        cursor: pointer;
+        text-transform: uppercase;
+        text-align: center;
+    }
+    
+    .add-to-card-lienhe {
+        background: rgb(237, 27, 36);
+        border-color: rgb(237, 27, 36);
+        color: rgb(255, 255, 255);
+        font-weight: 500;
+        font-size: 12px;
+        margin-bottom: 12px;
+        border: 1px solid#197bb7;
+        height: 38px;
+        cursor: pointer;
+        text-transform: uppercase;
+        text-align: center;
+    }
+    .total-price .price-box .special-price{
+        font-size: 12px;
+    }
 }
