--- a/src/app/build-pc/components/add-build-pc-modal.component.css
+++ b/src/app/build-pc/components/add-build-pc-modal.component.css
@@ -226,3 +226,19 @@
     padding-bottom: 20px;
     list-style: none;
 }
+
+@media screen and (max-width: 480px){
+    .item .product-shop .product-name a {
+        font-size: 12px;
+        margin: 0 0 -5px;
+        text-align: left;
+        line-height: normal;
+        letter-spacing: 1px;
+        font-weight: 600;
+        /* border-bottom: 1px solid #e5e5e5; */
+        display: flex;
+        color: #005ec4;
+        line-height: 22px;
+        font-family: Arial, Helvetica, sans-serif;
+    }
+}
