--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -90,8 +90,8 @@
         </div>
         <div class="col-sm-6 col-md-2 col-xs-12 collapsed-block">
           <div class="footer-links">
-            <h3 class="links-title">Địa chỉ cửa hàng<a class="expander visible-xs" href="#TabBlock-1">+</a></h3>
-            <div class="tabBlock" id="TabBlock-1">
+            <h3 class="links-title">Địa chỉ cửa hàng<a class="" href="#TabBlock-2"></a></h3>
+            <div  id="TabBlock-1">
               <ul class="list-links list-unstyled">
                 <iframe src="https://www.google.com/maps/embed?pb=!1m23!1m12!1m3!1d2326.2584720404884!2d106.09826705903632!3d11.31388036894865!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!4m8!3e6!4m0!4m5!1s0x310b6bc26d1df57b%3A0x248c4a5914f3bb57!2zxJDEg25nIE1pbmggQ29tcHV0ZXIsIGjhurttIDI5LzE2IEPDoWNoIE3huqFuZyBUaMOhbmcgVMOhbSwgS1AxIFAzLCBUw6J5IE5pbmgsIDcwMDAwLCBWaeG7h3QgTmFt!3m2!1d11.3127348!2d106.10035479999999!5e0!3m2!1svi!2s!4v1694620616267!5m2!1svi!2s" 
                 width="350" height="200" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
@@ -117,7 +117,7 @@
         <div class="col-sm-3 col-md-2 col-xs-12 collapsed-block">
           <div class="footer-links">
             <!-- <h3 class="links-title">Thông tin<a class="expander visible-xs" href="#TabBlock-4">+</a></h3> -->
-            <div class="tabBlock" id="TabBlock-4">
+            <div  id="TabBlock-4">
               <ul class="list-links list-unstyled">
                 <!-- <li><a  [routerLink]="['/danh-muc-san-pham-g']" [queryParams]="{typeStatus: 2}">Sản phẩm bán chạy</a></li>
                 <li><a  [routerLink]="['/danh-muc-san-pham-g']" [queryParams]="{typeStatus: 1}">Sản phẩm giảm giá</a></li>
@@ -130,8 +130,8 @@
         </div>
         <div class="col-sm-6 col-md-4 col-xs-12 collapsed-block">
           <div class="footer-links">
-            <h3 class="links-title">Working hours<a class="expander visible-xs" href="#TabBlock-5">+</a></h3>
-            <div class="tabBlock" id="TabBlock-5">
+            <h3 class="links-title">Working hours<a class="" href="#TabBlock-3"></a></h3>
+            <div  id="TabBlock-5">
               <div class="footer-description">ĐĂNG MINH COMPUTER.</div>
               <div class="footer-description">
                 <p>Chuyên kinh doanh các loại PC - LAPTOP - LCD - GAMING- CAMERA - MÁY TÍNH VĂN PHÒNG</p>
