--- a/src/app/slider/slider.component.css
+++ b/src/app/slider/slider.component.css
@@ -1,3 +1,15 @@
 .main-slider{
     margin-top: 20px;
 }
+.image-banner{
+    min-height: 420px;
+}
+@media screen and (max-width: 1024px) {
+    .hidden-xs{
+        display: none  !important;
+    }
+    .image-banner{
+        min-height: 220px;
+        max-height:  320px !important;
+    }
+}
