--- a/src/app/slider/slider.component.html
+++ b/src/app/slider/slider.component.html
@@ -5,14 +5,14 @@
         <div style="min-height: 450px;" class="col-md-3 col-sm-3 col-xs-3 banner-left hidden-xs">
           <!-- <img src="./../assets/images/banner-left.jpg" alt="banner"> -->
         </div>
-        <div class="col-sm-9 col-md-9 col-lg-9 col-xs-9 jtv-slideshow">
+        <div class="col-sm-12 col-md-12 col-lg-9 col-xs-12">
           <div id="jtv-slideshow">
             <div  id='rev_slider_4_wrapper' class='rev_slider_wrapper fullwidthbanner-container' >
               <div  id='rev_slider_4' class='rev_slider fullwidthabanner'>
                 <owl-carousel-o  [options]="customOptions">
                   <ng-container *ngFor="let slider of sliders;let i = index;">
                     <ng-template carouselSlide [id]=" i.toString()" [width]="slider.width">
-                      <a href="{{getUrl(slider.url)}}"> <img style="min-height: 400px;" [src]="urlImg + slider.imageUrl" data-bgposition='left top' data-bgfit='cover' data-bgrepeat='no-repeat' alt="banner"/></a>
+                      <a href="{{getUrl(slider.url)}}"> <img class="image-banner" [src]="urlImg + slider.imageUrl" data-bgposition='left top' data-bgfit='cover' data-bgrepeat='no-repeat' alt="banner"/></a>
                       <div class="caption-inner">
                         <!-- 
                           <div class='tp-caption sfb  tp-resizeme ' data-x='370'  data-y='280'  data-endspeed='500'  data-speed='500' data-start='1500' data-easing='Linear.easeNone' data-splitin='none' data-splitout='none' data-elementdelay='0.1' data-endelementdelay='0.1' style='z-index:4; white-space:nowrap;'><a href='#' class="buy-btn">Get Started</a> </div> -->
