--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -99,6 +99,11 @@
 	margin-top: 0px;
 }
 
+.home-tab-banner {
+	padding: 0px;
+	margin-bottom: 4px;
+	margin-top: 30px;
+}
 
 @media screen and (max-width: 1024px) {
 
