--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -71,7 +71,7 @@
     </div>
   </div>
   <div class="container" *ngIf="centerBanner">
-    <div class="home-tab">
+    <div class="home-tab-banner">
     <a [routerLink]="['/danh-muc-san-pham-g']" [queryParams]="{typeStatus: 1}"><img
       [src]="(centerBanner) && (urlImg + centerBanner.pathImage)" alt="Banner right"></a>
     </div>
