--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -13,13 +13,13 @@
         </li>
     </ul>
 </div>
-<div class="imagebanner1fix huver">
+<div class="imagebanner1fix huver" *ngIf="leftBanner">
     <a [routerLink]="['/danh-muc-san-pham-g']" [queryParams]="{typeStatus: 1}"><img
         [src]="(leftBanner) && (urlImg + leftBanner.pathImage)" alt="Banner left"></a>
   </div>
-  <div class="imagebanner2fix huver">
+  <div class="imagebanner2fix huver"  *ngIf="rightlBanner">
     <a [routerLink]="['/danh-muc-san-pham-g']" [queryParams]="{typeStatus: 1}"><img
-        [src]="(leftBanner) && (urlImg + leftBanner.pathImage)" alt="Banner right"></a>
+        [src]="(rightlBanner) && (urlImg + rightlBanner.pathImage)" alt="Banner right"></a>
   </div>
 
 <div id="page" [style.left]="isShowMenu ? '250px' : '0px'">
