--- a/src/app/build-pc/components/add-build-pc-modal.component.css
+++ b/src/app/build-pc/components/add-build-pc-modal.component.css
@@ -289,6 +289,11 @@
 
 
 @media screen and (max-width: 480px) {
+    .products-list .product-shop {
+        float: left;
+        width: 100%;
+    }
+
     .item .product-shop .product-name a {
         font-size: 12px;
         margin: 0 0 -5px;
@@ -321,6 +326,7 @@
         margin-left: -5px;
         z-index: 999;
     }
+
     /* .product-inline-table{
         display: inline-table;
     } */
@@ -340,6 +346,36 @@
     }
 
     .products-list .product-img {
-        width: 40% !important;
+        width: 80% !important;
+    }
+
+    .product-code {
+        font-size: 12px;
+        font-family: Arial, Helvetica, sans-serif;
+    }
+
+    .product-inline-table {
+        font-size: 12px;
+        font-family: Arial, Helvetica, sans-serif;
+    }
+
+
+    .add-cart-buttons .btn-add-cart {
+        width: 20%;
+        height: 30px;
+        background: #197bb7;
+        border: none;
+        font-weight: 600;
+        font-size: 12px;
+        color: #fff;
+        float: right;
+        border-radius: 5px;
+    }
+
+}
+
+@media screen and (max-width: 768px) {
+    .products-list .product-img {
+        width: 40%;
     }
 }
